--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%
+}
+
 header {
   display: flex;
+  position: fixed;
+  width: 100%;
   font-family: Verdana;
   font-size: 14px;
   font-weight: bold;
@@ -7,6 +16,8 @@ header {
   justify-content: space-between;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
+  background-color: white;
+  z-index: 10;
 }
 
 .logo {
@@ -22,20 +33,21 @@ header {
 
 nav {
   display: inline-block;
-  position: static;
+    padding-right: 30px;
 }
 
 nav a {
   color: black;
   margin: 20px 10px;
-
 }
 
 .main-container {
 display: flex;
+position: relative;
 flex-flow: row nowrap;
 justify-content: space-between;
-padding: 30px 0px;
+padding: 100px 0px;
+z-index: 5;
 }
 
 .main-container div {
@@ -50,10 +62,12 @@ padding: 30px 0px;
 
 .main-container .column.large {
   width: 630px;
+  justify-content: flex-start;
 }
 
 .main-container .column.medium {
   width: 300px;
+  justify-content: center;
 }
 
 .main-container .column.small {
