--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
   font-weight: bold;
   align-items: center;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding: 10px 0px;
   border-bottom: 1px solid black;
   background-color: white;
   z-index: 10;
@@ -46,7 +46,7 @@ display: inline-flex;
 position: relative;
 flex-flow: row nowrap;
 justify-content: space-between;
-padding: 100px 0px;
+padding: 120px 0px;
 z-index: 5;
 }
 
@@ -76,6 +76,7 @@ z-index: 5;
 .image-story, .top-image {
   display: flex;
   height: 300px;
+  align-items: center;
 }
 
 .image-story span, .top-story span {
@@ -152,4 +153,30 @@ z-index: 5;
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+}
+
+footer {
+ display: flex;
+ width: 100%;
+ height: 325px;
+ background-color: MediumAquamarine;
+ margin: auto;
+ font-family: Verdana;
+ font-size: 12px;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+}
+
+footer .logo2 .logo-name{
+font-family: Georgia;
+font-size: 16px;
+font-weight: bold;
+color: white;
+border-right: 2px white solid;
+padding-right: 25px;
+}
+
+footer .logo2 nav {
+  padding: 10px 20px;
 }
